--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,8 +588,21 @@ body {
   .portfolio .portfolio-item {
     margin-bottom: 30px;
   }
-  
+  .portfolio .galery-item {
+    margin-bottom: 30px;
+  }
+
   .portfolio #portfolio-flters {
+    padding: 0;
+    margin: 0 auto 25px auto;
+    list-style: none;
+    text-align: center;
+    background: #fff;
+    border-radius: 50px;
+    padding: 2px 15px;
+  }
+
+  .portfolio #galery-flters {
     padding: 0;
     margin: 0 auto 25px auto;
     list-style: none;
@@ -611,13 +624,33 @@ body {
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
   }
+
+  .portfolio #galery-flters li {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 15px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #272829;
+    margin-bottom: 5px;
+    transition: all 0.3s ease-in-out;
+  }
   
   .portfolio #portfolio-flters li:hover,
+  .portfolio #galery-flters li:hover,
   .portfolio #portfolio-flters li.filter-active {
+    color: #0563bb;
+  }
+  .portfolio #galery-flters li.filter-active {
     color: #0563bb;
   }
   
   .portfolio #portfolio-flters li:last-child {
+    margin-right: 0;
+  }
+  .portfolio #galery-flters li:last-child {
     margin-right: 0;
   }
   
