--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,11 +146,11 @@ body {
     }
   }
   
-  @media (min-width: 991px) {
+  /* @media (min-width: 991px) {
     #main {
       margin-left: 100px;
     }
-  }
+  } */
   
   /*--------------------------------------------------------------
   # Navigation Menu
@@ -585,6 +585,7 @@ body {
   /*--------------------------------------------------------------
   # Portfolio
   --------------------------------------------------------------*/
+  
   .portfolio .portfolio-item {
     margin-bottom: 30px;
   }
@@ -612,19 +613,7 @@ body {
     padding: 2px 15px;
   }
   
-  .portfolio #portfolio-flters li {
-    cursor: pointer;
-    display: inline-block;
-    padding: 10px 15px;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 1;
-    text-transform: uppercase;
-    color: #272829;
-    margin-bottom: 5px;
-    transition: all 0.3s ease-in-out;
-  }
-
+  .portfolio #portfolio-flters li,
   .portfolio #galery-flters li {
     cursor: pointer;
     display: inline-block;
@@ -636,15 +625,20 @@ body {
     color: #272829;
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
+    border-radius: 20px; 
+    border: 1px solid #000000;
   }
   
   .portfolio #portfolio-flters li:hover,
-  .portfolio #galery-flters li:hover,
-  .portfolio #portfolio-flters li.filter-active {
-    color: #0563bb;
+  .portfolio #galery-flters li:hover{
+    background-color: #0563bb; 
+    color: #fff; 
   }
+  
+  .portfolio #portfolio-flters li.filter-active,
   .portfolio #galery-flters li.filter-active {
-    color: #0563bb;
+    background-color: #0563bb; 
+    color: #fff; 
   }
   
   .portfolio #portfolio-flters li:last-child {
